GNOME Bugzilla – Bug 779895
When selecting "New project" it takes very long till application responds
Last modified: 2017-03-14 05:27:03 UTC
When I click on "New Project" the application is often pretty long unresponsive (especially if an project is currently open). The popup "Builder does not respond" opens regularly.
I can't replicate this. Is it easily repeatable for you? If so, can you get an idea if we are spinning CPU by looking at top while it's happening?
Yes it is easily repeatable for me and yes it is using the CPU in this time. What I do is: I open a project (size does not matter) and then I create a new project. This takes pretty long (about 10s) and I don't have a slow laptop (8GB, 4xCore i7 - 2GHz and SSD). But it should probably never be unresponsive ;-)
Seems to work fine here. Are you building the second project in the background? Is it C++ by chance (I don't promise to be able to work around g++ taking all your system resources).
No, I'm not building anything. The first project is just open and the processor idle. It is independed of the type of the 1st project.
If we aren't building and still not responding (assuming Builder is consuming all the CPU), I would venture a guess that the mainloop is spinning about something. Although I'm not sure what that could be nor do I have good tooling to help you debug that yet. That code isn't particularly complex or doing anything tricky.
Created attachment 347893 [details] This is a stacktrace from interrupting Builder after clicking "New Project" This issue only occurs if you have a project open already and use the menu in the gnome shell header to select "New Project" or "Open Project", but does not occur if you do that at the greeter when Builder first starts up.
Eek, we're doing stuff with the remote there. I guess we need to move that into a thread and do delayed loading of preferences (via main loop callbacks).
This was fixed by commit 2450f235ff64c4ca6de3d0f202a852ed8be234b5