flatpak: Make preference addin reload async

The call to flatpak_installation_list_remote_refs_sync in add_runtimes
causes Builder's interface to freeze, so run it in a separate thread
from the main one.

https://bugzilla.gnome.org/show_bug.cgi?id=779895